Add : Added fontello files and modified arrow pictogram

--- a/fontello-43f9b9ae/config.json
+++ b/fontello-43f9b9ae/config.json
@@ -31,9 +31,9 @@
       "src": "typicons"
     },
     {
-      "uid": "55ae6ea25cd707fe34af5b52b2001cdc",
-      "css": "down-circled",
-      "code": 61611,
+      "uid": "1c4068ed75209e21af36017df8871802",
+      "css": "down-big",
+      "code": 59395,
       "src": "fontawesome"
     }
   ]
